SignUp.jsx states all able to be set through child components

--- a/config/database.yml
+++ b/config/database.yml
@@ -14,22 +14,44 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
+# PostgreSQL. Versions 9.1 and up are supported.
+#
+# Install the pg driver:
+#   gem install pg
+# On OS X with Homebrew:
+#   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
+# On OS X with MacPorts:
+#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
+# On Windows:
+#   gem install pg
+#       Choose the win32 build.
+#       Install PostgreSQL and put its /bin directory on your path.
+#
+# Configure Using Gemfile
+# gem 'pg'
+#
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: weiseradmin
+  password: Annabelle14
+  host: localhost
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: weisman_development
+  database: weisman
+  username: weiseradmin
+  password: Annabelle14
+  host: localhost
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: weisman
+  #username: barweiser
 
   # The password associated with the postgres role (username).
   #password:
@@ -81,5 +103,5 @@ test:
 production:
   <<: *default
   database: weisman_production
-  username: weisman
-  password: <%= ENV['WEISMAN_DATABASE_PASSWORD'] %>
+  username: barweiser
+  password: <%= ENV['BARWEISER_DATABASE_PASSWORD'] %>
