--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.0",
     "antd": "^3.0.2",
+    "axios": "^0.18.0",
     "babel-preset-react": "^6.24.1",
     "coffeescript": "1.12.7",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.7"
